RAIN-3185 3187 : HRMS and Receipts card alignment fix in Inbox screen (#1119)
* RAIN-3185 3187 : HRMS and Receipts card alignment fix in Inbox screen

* Added css class and updated in modules

--- a/packages/css/src/pages/employee/inbox.scss
+++ b/packages/css/src/pages/employee/inbox.scss
@@ -322,3 +322,10 @@
 .search-error-label {
   @apply font-bold text-legend text-error mb-sm !important;
 }
+
+
+.inbox-action-container{
+  display: "flex";
+  justify-content: "flex-end";
+  align-items: "flex-start";
+}
